--- a/config.json
+++ b/config.json
@@ -181,7 +181,7 @@
 	},
 	[
 		{
-			"text": ":P AAAAAAAAAAAAHHHHHHHHHHHHHHHH LETS GOOOOOOOOOOOOOO I LOVE YOU SO MUUUUUUCHHHH"
+			"text": ":P AAAAAAAAAAAAHHHHHHHHHHHHHHH</br>LETS GOOOOOOOOOOOOOO</br>I LOVE YOU SO MUUUUUUCHHHH"
 		},
 		{
 			"text": "Phew. Close one"
