Added smooth scrolling

--- a/config.json
+++ b/config.json
@@ -45,7 +45,7 @@
 		"submit":"Got it!",
 		"answer": {
 			"index": 2,
-			"incorrect": "Ooooh so close, 8 months.",
+			"incorrect": "Ooooh so close, 8 years.",
 			"correct": "Did you guess?"
 		}
 	},
